[package]
name = "project_euler"
version = "0.1.0"
authors = ["Neil Ashford <ashfordneil0@gmail.com>"]

[dependencies]
itertools = "*"

[[bin]]
name = "p1"
path = "src/p1.rs"

[[bin]]
name = "p2"
path = "src/p2.rs"

[[bin]]
name = "p3"
path = "src/p3.rs"

[[bin]]
name = "p4"
path = "src/p4.rs"

[[bin]]
name = "p5"
path = "src/p5.rs"

[[bin]]
name = "p6"
path = "src/p6.rs"

[[bin]]
name = "p7"
path = "src/p7.rs"

[[bin]]
name = "p8"
path = "src/p8.rs"

[[bin]]
name = "p9"
path = "src/p9.rs"

[[bin]]
name = "p10"
path = "src/p10.rs"

[[bin]]
name = "p11"
path = "src/p11.rs"
